[project]
name = "mcp-commvault"
version = "0.1.0"
description = "MCP server for Commvault Backup & Recovery REST API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "httpx-socks>=0.7.3",
]

[project.scripts]
mcp-commvault = "commvault_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commvault_mcp"]
